--- a/plugins/core/config/xmlpresconfigform.ui
+++ b/plugins/core/config/xmlpresconfigform.ui
@@ -63,23 +63,29 @@
         <item>
          <widget class="QCheckBox" name="m_showSubEltCheckBox">
           <property name="whatsThis">
-           <string>If checked, when you filter the text, the list show sub-element of node where the filter verify the text.</string>
+           <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:8pt;&quot;&gt;If checked, when the text is filtered, the list shows sub-elements of the node whose filter matches the node name.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
           <property name="text">
-           <string>&amp;Show sub-element of a corresponding node</string>
+           <string>&amp;Show sub-element of the corresponding node</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QCheckBox" name="m_showNameAttributeCheckBox">
           <property name="whatsThis">
-           <string>&lt;p&gt;If checked the name attribute is added in &lt;i&gt;XPATH&lt;/i&gt; if possible.&lt;/p&gt;
-
-&lt;p&gt;If checked the &lt;i&gt;XPATH&lt;/i&gt; will be as :
-&lt;code&gt;VueXXXX[@name='MyName']&lt;/code&gt;&lt;/p&gt;</string>
+           <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;If checked the name attribute is added in &lt;span style=&quot; font-style:italic;&quot;&gt;XPATH&lt;/span&gt; if possible. &lt;/p&gt;
+&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;If checked the &lt;span style=&quot; font-style:italic;&quot;&gt;XPATH&lt;/span&gt; will be : &lt;span style=&quot; font-family:'Courier New,courier';&quot;&gt;VueXXXX[@name='MyName']&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
           <property name="text">
-           <string>Show name attribute if exist</string>
+           <string>Show name attribute if it exists</string>
           </property>
          </widget>
         </item>
@@ -731,8 +737,6 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources>
-  <include location="../../../xinx/application.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
