--- a/framework/snipets/snipetpropertydlg.ui
+++ b/framework/snipets/snipetpropertydlg.ui
@@ -53,7 +53,11 @@
           <item row="0" column="1">
            <widget class="QLineEdit" name="m_nameLineEdit">
             <property name="whatsThis">
-             <string>Name of the snipet used in to identify the snipet in menus.</string>
+             <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:8pt;&quot;&gt;Name of the snipet used to identify the snipet in menus.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
             </property>
            </widget>
           </item>
@@ -73,7 +77,7 @@
           <item row="2" column="0">
            <widget class="QLabel" name="label_6">
             <property name="text">
-             <string>&amp;Extention :</string>
+             <string>&amp;Extension :</string>
             </property>
             <property name="buddy">
              <cstring>m_extentionListWidget</cstring>
@@ -100,7 +104,7 @@
           <item row="5" column="0">
            <widget class="QLabel" name="label_4">
             <property name="text">
-             <string>&amp;Automatic feature :</string>
+             <string>&amp;Automatic features :</string>
             </property>
             <property name="buddy">
              <cstring>m_autoChk</cstring>
@@ -149,7 +153,11 @@
              </size>
             </property>
             <property name="whatsThis">
-             <string>Long descriptions of the snipet.</string>
+             <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:8pt;&quot;&gt;Long description of the snipet.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
             </property>
            </widget>
           </item>
@@ -194,6 +202,9 @@
             <property name="rootIsDecorated">
              <bool>false</bool>
             </property>
+            <attribute name="headerVisible">
+             <bool>false</bool>
+            </attribute>
             <attribute name="headerVisible">
              <bool>false</bool>
             </attribute>
@@ -253,7 +264,11 @@
           <item row="0" column="0">
            <widget class="XinxCodeEditAction" name="m_textEdit" native="true">
             <property name="whatsThis">
-             <string>Templat to show to screen. In this template you can define parameter by used &lt;i&gt;%n&lt;/i&gt; keyword where &lt;i&gt;n&lt;/i&gt; is a number. More sophisticate snipet can use ECMAScript. Balise &lt;i&gt;&amp;lt;?= ?&amp;gt;&lt;/i&gt; is used to call script and show the text returned by the script. &lt;i&gt;&amp;lt;?    ?&amp;gt;&lt;/i&gt; can be used to init the script and make some pre-process.</string>
+             <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Template to show to screen. In this template you can define parameter by using the &lt;span style=&quot; font-style:italic;&quot;&gt;%n&lt;/span&gt; keyword where &lt;span style=&quot; font-style:italic;&quot;&gt;n&lt;/span&gt; is a number. More sophisticated snipets can use ECMAScript. Balise &lt;span style=&quot; font-style:italic;&quot;&gt;&amp;lt;?= ?&amp;gt;&lt;/span&gt; is used to call script and show the text returned by the script. &lt;span style=&quot; font-style:italic;&quot;&gt;&amp;lt;? ?&amp;gt;&lt;/span&gt; can be used to init the script and make some pre-process.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
             </property>
            </widget>
           </item>
@@ -284,6 +299,9 @@
          <layout class="QGridLayout" name="gridLayout_7">
           <item row="0" column="0">
            <widget class="QTableView" name="m_parameterTable">
+            <attribute name="horizontalHeaderStretchLastSection">
+             <bool>true</bool>
+            </attribute>
             <attribute name="horizontalHeaderStretchLastSection">
              <bool>true</bool>
             </attribute>
@@ -325,14 +343,14 @@
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>StringComboBox</class>
-   <extends>QComboBox</extends>
-   <header location="global">stringcombobox.h</header>
-  </customwidget>
-  <customwidget>
    <class>CategoryTreeView</class>
    <extends>QTreeView</extends>
    <header>snipets/categorytreeview.h</header>
+  </customwidget>
+  <customwidget>
+   <class>StringComboBox</class>
+   <extends>QComboBox</extends>
+   <header location="global">stringcombobox.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
