--- a/plugins/generix/projectproperty/wizard/newgenerixderivation1page.ui
+++ b/plugins/generix/projectproperty/wizard/newgenerixderivation1page.ui
@@ -67,17 +67,28 @@ In &lt;b&gt;GCE 150&lt;/b&gt; or later, the choice has few impact</string>
       </spacer>
      </item>
      <item>
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>&amp;Name of the project directory : </string>
-       </property>
-       <property name="buddy">
-        <cstring>m_projectPathEdit</cstring>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="m_projectPathEdit"/>
+      <layout class="QGridLayout" name="gridLayout">
+       <item row="0" column="0">
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string>&amp;Name of the project directory : </string>
+         </property>
+         <property name="buddy">
+          <cstring>m_projectPathEdit</cstring>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QLineEdit" name="m_projectPathEdit"/>
+       </item>
+       <item row="1" column="0" colspan="2">
+        <widget class="QCheckBox" name="m_projectDirectoryAsPrefix">
+         <property name="text">
+          <string>Add the project directory name as prefix</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
     </layout>
    </item>
