--- a/plugins/generix/projectproperty/wizard/newgenerixinformationpage.ui
+++ b/plugins/generix/projectproperty/wizard/newgenerixinformationpage.ui
@@ -10,6 +10,9 @@
     <height>353</height>
    </rect>
   </property>
+  <property name="focusPolicy">
+   <enum>Qt::StrongFocus</enum>
+  </property>
   <property name="windowTitle">
    <string>WizardPage</string>
   </property>
@@ -80,7 +83,7 @@
      <item row="0" column="1">
       <widget class="DirectoryEditWidget" name="m_webModuleLocation" native="true">
        <property name="focusPolicy">
-        <enum>Qt::TabFocus</enum>
+        <enum>Qt::StrongFocus</enum>
        </property>
        <property name="directory" stdset="0">
         <bool>true</bool>
@@ -102,13 +105,10 @@
        <property name="text">
         <string>Location of the &amp;data stream :</string>
        </property>
+       <property name="buddy">
+        <cstring>m_dataStreamEdit</cstring>
+       </property>
       </widget>
-     </item>
-     <item row="2" column="1">
-      <widget class="DirectoryEditWidget" name="m_dataStreamEdit" native="true"/>
-     </item>
-     <item row="3" column="1">
-      <widget class="QLineEdit" name="m_urlLocationEdit"/>
      </item>
      <item row="3" column="0">
       <widget class="QLabel" name="label_4">
@@ -117,6 +117,20 @@
        </property>
        <property name="buddy">
         <cstring>m_urlLocationEdit</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="DirectoryEditWidget" name="m_dataStreamEdit" native="true">
+       <property name="focusPolicy">
+        <enum>Qt::StrongFocus</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="DirectoryEditWidget" name="m_urlLocationEdit" native="true">
+       <property name="focusPolicy">
+        <enum>Qt::StrongFocus</enum>
        </property>
       </widget>
      </item>
@@ -167,7 +181,7 @@
   <customwidget>
    <class>DirectoryEditWidget</class>
    <extends>QWidget</extends>
-   <header>directoryedit.h</header>
+   <header location="global">directoryedit.h</header>
    <container>1</container>
   </customwidget>
   <customwidget>
