--- a/plugins/core/config/editorsconfigform.ui
+++ b/plugins/core/config/editorsconfigform.ui
@@ -29,24 +29,24 @@
       <property name="labelAlignment">
        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
       </property>
-      <item row="0" column="0">
-       <widget class="QCheckBox" name="m_addClosedBaliseCheckBox">
-        <property name="text">
-         <string>&amp;Add closed balise automatically</string>
-        </property>
-       </widget>
-      </item>
       <item row="1" column="0">
        <widget class="QCheckBox" name="m_addDefaultAttributeCheckBox">
         <property name="text">
-         <string>Add default a&amp;ttribute automatically</string>
+         <string>Add the default a&amp;ttribute automatically to the balise</string>
         </property>
        </widget>
       </item>
       <item row="2" column="0">
        <widget class="QCheckBox" name="m_addDefaultSubBaliseCheckBox">
         <property name="text">
-         <string>Add default sub-&amp;balise automatically</string>
+         <string>Add default sub-&amp;balise automatically (like xsl:when for the xsl:choose balise)</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0" colspan="2">
+       <widget class="QCheckBox" name="m_addClosedBaliseCheckBox">
+        <property name="text">
+         <string>&amp;Add closing balise automatically (for the corresponding opening balise)</string>
         </property>
        </widget>
       </item>
