--- a/plugins/generix/plugindefinition/generix.qrc
+++ b/plugins/generix/plugindefinition/generix.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/generix" >
+        <file alias="qcodeedit/lan/maquette.qnfa" >../editors/qcodeedit/maquette.qnfa</file>
         <file>images/logo_gce32.png</file>
         <file>images/logo_gce64.png</file>
         <file>images/dictionary.png</file>
