--- a/plugins/services/ui/servicesbatch.ui
+++ b/plugins/services/ui/servicesbatch.ui
@@ -23,6 +23,15 @@
    </item>
    <item>
     <widget class="QTableWidget" name="editorWidget">
+     <property name="editTriggers">
+      <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
+     <property name="selectionMode">
+      <enum>QAbstractItemView::NoSelection</enum>
+     </property>
+     <attribute name="horizontalHeaderStretchLastSection">
+      <bool>true</bool>
+     </attribute>
      <attribute name="horizontalHeaderStretchLastSection">
       <bool>true</bool>
      </attribute>
