Add a new page in options dialog

--- a/xinx/customdialog/ui/customcontentview.ui
+++ b/xinx/customdialog/ui/customcontentview.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>585</width>
-    <height>271</height>
+    <height>297</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -26,6 +26,12 @@
    </item>
    <item>
     <widget class="QSplitter" name="splitter">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
@@ -73,21 +79,21 @@ cv_node : 12323kb
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_3">
+      <widget class="QPushButton" name="m_compactBaseBtn">
        <property name="text">
         <string>Compact Data Base</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_2">
+      <widget class="QPushButton" name="m_reindexBaseBtn">
        <property name="text">
         <string>Recreate Indexes</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="m_cleanBaseBtn">
        <property name="text">
         <string>Clean Data Base</string>
        </property>
