Ajout de l'option "Retour à la ligne automatique"

--- a/xinx/customdialog/ui/customeditor.ui
+++ b/xinx/customdialog/ui/customeditor.ui
@@ -52,6 +52,13 @@
         </property>
        </widget>
       </item>
+      <item>
+       <widget class="QCheckBox" name="m_wrapLineChk">
+        <property name="text">
+         <string>Wrap Line</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
