--- a/plugins/svnpluginwrapper/svnpluginwrapper.qrc
+++ b/plugins/svnpluginwrapper/svnpluginwrapper.qrc
@@ -1,6 +1,6 @@
-<RCC>
+<RCC> 
     <qresource prefix="/" >
-        <file>images/repos_svn.png</file>
+        <file>images/svnwrapper.png</file>
 	<file>translations/svnpluginwrapper_fr.qm</file>
     </qresource>
 </RCC>
