fixes #375:  - désactiver la recherche des erreurs en cours de saisie, mais l'activer à l'enregistrement et/ou à la demande : '''Non réalisé. Il est possible d'augmenter le temps de frappe pour que le rafraichissement soit plus lent'''  - pouvoir figer la zone du journal des erreurs : '''Fait à partir d'une option dans l'onglet "Editeur"'''  - décaller le texte de l'éditeur en même temps que le journal s'ouvre : '''Fait'''

--- a/xinx/customdialog/ui/customeditor.ui
+++ b/xinx/customdialog/ui/customeditor.ui
@@ -211,6 +211,22 @@
      </layout>
     </widget>
    </item>
+   <item row="3" column="0" colspan="2">
+    <widget class="QGroupBox" name="groupBox_4">
+     <property name="title">
+      <string>Editin&amp;g options</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_2">
+      <item>
+       <widget class="QCheckBox" name="m_autoCloseError">
+        <property name="text">
+         <string>Automatically close error dock</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources/>
