--- a/plugins/generix/savedialog/derivationdialog.ui
+++ b/plugins/generix/savedialog/derivationdialog.ui
@@ -57,7 +57,7 @@
        <widget class="QListWidget" name="m_derivationPathList"/>
       </item>
       <item>
-       <widget class="QLabel" name="label_3">
+       <widget class="QLabel" name="_prefixLabel">
         <property name="text">
          <string>&amp;Prefixes :</string>
         </property>
