--- a/plugins/generix/docks/project/gnxprojectdock.ui
+++ b/plugins/generix/docks/project/gnxprojectdock.ui
@@ -57,6 +57,9 @@
    </item>
    <item>
     <widget class="QListWidget" name="m_businessViewList">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="selectionMode">
       <enum>QAbstractItemView::NoSelection</enum>
      </property>
